/* Toolchain: Make ipk */

--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -32,6 +32,10 @@ http://soft.oralux.net/gutenflash/
 Original website: http://toykeeper.net/programs/flash/
 
 == Toolchain: Make ipk ==
+The comment below might be addressed elsewhere (irc, list?) (GC).
+
+
+
  *download snapshot from http://toykeeper.net/programs/flash/files/
  *cd to ipk-folder
  *make
