--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -29,7 +29,7 @@ and edit it.
 Current mokoified version (ipk package and bitbake recipe):
 http://soft.oralux.net/gutenflash/
 
-Original website: http://toykeeper.net/programs/flash/
+Upstream website: http://toykeeper.net/programs/flash/
 
 == Toolchain: Make ipk ==
 The comment below might be addressed elsewhere (irc, list?) (GC).
