--- a/GPS_Problems.mw
+++ b/GPS_Problems.mw
@@ -16,6 +16,9 @@ Openmoko is soliciting the assistance of the community to test the effectiveness
 Openmoko is also examining a hardware solution: soldering a 10 pf capacitor between SD card pin 5 (clk) and pin 6 (Vss) [[Image:Gta02 gps 10pf rework sop.pdf]] and more detailed [[Image:SOP_for_GPS_capacitor_rework.pdf|GPS issue SD clcok pin capacitor rework guide]]. This effectively restores GPS performance to the levels obtained without the SD card inside. The rework is not suggested to end users without hardware soldering technique and equipment.
 
 Openmoko 
+
+{{Note|It seems that in the newer version of the hardware, the capacitor is already present (DATE CODE:20080724). TO BE CONFIRMED}}
+
 ==== Hardware mod related ====
 
 See:  
