/* Turning your FreeRunner into a Network Address Translation (NAT) gateway */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -627,7 +627,9 @@ so once connected through GPRS, I run:
 
   ./firewall.sh
 
-and then you should be able to connect to the internet from your computer! 
+and then you should be able to connect to the internet from your computer!
+
+Of course this also works when sharing your WLAN connection. Just set EXTIF to eth0.
 
 == See also ==
 * [[pppd]]
