/* Working SIM pics */

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -108,6 +108,12 @@ EVENT: Signal Quality: 31
 EVENT: Signal Quality: 31
 </pre>
 
+== Working and not working AT&T card ==
+
+* Some AT&T cards have same vendor/ID number, but different contacts (Josh posted at 2008/8/24), following image shows that card that working (right) and not working (left) one.
+
+[[Image:ATT_simcards_small.jpg]]
+
 == Working SIM pics ==
 
 [[Image:Adam_20080713_working_back.JPG]]
