/* Crank up the charge */

--- a/Biking.mw
+++ b/Biking.mw
@@ -10,9 +10,9 @@ It's just a prototype :) but with some foam around the handlebar and careful pos
 
 If you want to keep the GPS running and have the screen always on or staying on with a long timeout, you'll need a way to supplement power.
 
-If you decide to try solar, it's recommended to get a flexible panel and attach it to your backback or something like that. It's unlikely anything below 10 watts will keep things running. (todo: add some data points). One nice advantage here is it might also charge even when you're not moving.
+If you decide to try solar, it's recommended to get a flexible panel and attach it to your backback or something like that. One nice advantage here is it might also charge even when you're not moving. It's unlikely anything below 7 watts will keep things running. (5v * 1A = 5W).
 
-The alternative is to steal energy from the crank. You can do this with a hub dynamo or possibly with an induction generator like the one on the reelight [http://www.reelight.com] (warning... overuse of flash)
+The alternative is to steal energy from the crank. You can do this with a hub dynamo. It might work with an dynamo outside the hub like the one on the reelight [http://www.reelight.com]--it looks like their coil produces only 3vAC so it makes sense to use a custom coil.
 
 The regulator will have to be a do-it-yourself project regardless of the power source. See [http://www.iki.fi/~msmakela/electronics/dynamo5v/] for one approach. If you do want to try this with a switching regulator, there's a nice little pre-built module in the form factor of a linear regulator that should pop right in: [http://www.dimensionengineering.com/DE-SW050.htm]
 
