add link to log conversion tools

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -84,9 +84,8 @@ There are steps included in those instructions to improve GPS performance.  The 
 
 == Importing Tracks into TangoGPS ==
 
-TangoGPS is able to record and store a track in its native format, and tools exist to convert this to GPX.
+TangoGPS is able to record and store a track in its native format, and [http://psung.blogspot.com/2008/07/sharing-gps-tracks-from-tangogps-on.html tools] exist to convert this to GPX.
 However, TangoGPS does not support the import of tracks. You may help yourself by using [http://relet.net/frog/archives/68 this tool] to import GPX trackpoints as a series of POIs directly into the sqlite database which tangoGPS uses to store POIs.
-
 
 == Using Google Maps with TangoGPS ==
 
