/* Software for biking */

--- a/Biking.mw
+++ b/Biking.mw
@@ -35,7 +35,7 @@ Linear regulator above might be replaced with [http://www.dimensionengineering.c
 * [[TangoGPS]]
 * [[Navit]]
 * [[Installing Pyroute|Pyroute]]
-* [http://wiki.openstreetmap.org/index.php/Rana| Rana]
+* [http://wiki.openstreetmap.org/index.php/Rana Rana]
 
 == See also ==
 
