--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -118,7 +118,9 @@ GPX would accommodate everything we need but it's ASCII XML and that means 1/2 t
 
 == More features ==
 
-All I can think of at the moment is rangefinders. I am sure there are others.
+=== Audio clips ===
+
+It would be useful to be able to capture short audio comments, especially when collecting data for Openstreetmap. This can be easily done by starting recording when AUX is pressed and stopping it when it is released.
 
 === Laser rangefinder ===
 
