--- a/Mac_OS_X.mw
+++ b/Mac_OS_X.mw
@@ -1,12 +1,14 @@
-Welcome to the Openmoko page devoted to MacOS X users!
+Being primarily a Linux based project, the host platform of choice is Linux. However, it is entirely possible to work with Openmoko and Neo handsets using MacOS X, as you'll soon see.
 
-Here you can find notes of using Neo1973 and Neo Freerunner with Mac.
+There are actually two ways of working with Openmoko and MacOS X. One is simply to run ubuntustudio on parallels, in which case you would then follow the instructions for Linux, and Ubuntu in particular.
+
+On the other hand, if you wish to use MacOS X directly, please continue:
 
 = Flashing to your device =
 To operate the Phase 1 devices (Neo 1973), you need to flash a root file system first.
 
 == Graphical Flashing with Openmoko Flasher ==
-Here is a detailed instruction:
+Here are detailed instructions:
 # download Version 1.4 or later of Openmoko Flasher from http://www.dsitri.de/wiki.php?page=Openmoko%20Flasher
 # select the repository
 # press the Refresh button (which loads the list of packages on the server)
