--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -86,6 +86,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | ST STLC4550 (WIFI & BT coexistence) || NA || NA || NA || see [http://www.st.com/stonline/products/families/communication/wscomm/wlan/stlc4550.htm ST's website]
 |-
+| AzyreWave AW-GH381 (Marvell 8688) || NA || NA || NA || 
+|-
 |}
 
 '''Application Processor&MCU'''
