*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -318,6 +318,7 @@ __NOTOC__
 *[[Accelerometer data retrieval]]
 *[[NAND bad blocks]]
 *[[Boot from sd card]]
+*[[Charging battery directly]]
 ====Software Documentation====
 *[[Illume]]
 *[[Debian]]
