--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -10,8 +10,8 @@ __NOTOC__
 |valign="TOP" style="background:#333333;border-left:0px solid white;border-right:0px solid white;border-bottom:0px solid white;" | 
 <div align="left">
 
-:*[[Openmoko Taiwan|Openmoko 台灣行銷]]
-:*[http://pixnet.net/openmoko Openmoko 台灣相簿]
+:*[[Openmoko Taiwan|Openmoko 台灣校園行銷]]
+:*[http://pixnet.net/openmoko Openmoko 台灣校園相簿]
 
 </div>
 
