--- a/Today%2F2007.2%2Fit.mw
+++ b/Today%2F2007.2%2Fit.mw
@@ -8,7 +8,7 @@ L'applicazione Today è il punto di partenza dell'utente. Quindi essa risiede su
 # Lanciare una nuova applicazione.
 # Gestire le applicazioni in corso, ad esempio passare da un'applicazione all'altra o chiuderne una.
 
-== Casi d'uso ==
+== Possibili usi ==
 Di seguito potete trovare alcune casistiche di possibile utilizzo:
 * desiderare la visualizzazione in contemporanea del Calendario degli Eventi e della Lista dei Compiti giornalieri.
 * voler lanciare un applicazione.
