--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -19,7 +19,7 @@ On Om 2008.8, run the following commands from the Neo:
 
 This repository contains the following useful packages:
 
-* Pidgin - Instant Messaging.  Can connect to MSN, Google Talk, Yahoo, ICQ with additional plugins
+* [[Pidgin]] - Instant Messaging.  Can connect to MSN, Google Talk, Yahoo, ICQ with additional plugins
 * [[Minimo]] - Web Browsing.  AJAX capable, based on the Gecko rendering engine
 * [[Navit]] - Car Navigation with Routing Engine
 
