--- a/Bluetooth%2Fde.mw
+++ b/Bluetooth%2Fde.mw
@@ -28,6 +28,6 @@ http://www.mayrhofer.eu.org/home
 * [[USB]] for wired local connectivity
 * [[Software_Bluetooth_HID_Keyboard]]
 
-[[Category:Hardware/de]]
-[[Category:Bluetooth/de| ]]
-[[Category:Standard/de]]
+[[Category:Hardware]]
+[[Category:Bluetooth| ]]
+[[Category:Standard]]
