*Empty MediaWiki Message*

--- a/Samsung_S3C2442B_B54%2Fit.mw
+++ b/Samsung_S3C2442B_B54%2Fit.mw
@@ -6,4 +6,4 @@
 * Built-in 256 MB NAND
 * Evaluation board: [http://www.meritech.co.kr/products/product_view.php?num=52 S3C2442 EVB]
 
-[[Category:Chip/it]]
+[[Category:Chip]]
