*Empty MediaWiki Message*

--- a/QT2410%2Fzh_cn.mw
+++ b/QT2410%2Fzh_cn.mw
@@ -49,4 +49,4 @@ The 64MB NAND Flash is partitioned as follows:
 {{Languages|QT2410}}
 
 
-[[Category:Development Board/zh cn]]
+[[Category:Development Board]]
