*Empty MediaWiki Message*

--- a/USB_Networking%2Fit.mw
+++ b/USB_Networking%2Fit.mw
@@ -36,5 +36,5 @@ Eseguire <tt>ssh root@192.168.0.202</tt> con password vuota per entrare nel tele
 <span id="bottom"></span> 
 {{Languages|USB Networking}}
 
-[[Category:Hardware/it]]
-[[Category:Implemented/it]]
+[[Category:Hardware]]
+[[Category:Implemented]]
