/* General issues with categories */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -69,6 +69,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 ===General issues with categories===
 * Please read wikipedia [http://en.wikipedia.org/wiki/Wikipedia:Categorization Categorization] page and [http://en.wikipedia.org/wiki/Wikipedia:FAQ/Categorization FAQ]
 * There are way too many [[Special:Categories| categories]].
+* The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Categories_Index_Page categories index] is static and therefore out of date.
+* The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Official_Index_Page wiki index] is another static categorization.
 * There should be a small number of a orthogonal category trees, each describing one consistent conceptual taxonomy. Pages can fit in multiple categories.
 * Categories should not include language.
 * There should be only one category taxonomy for the "Neo type" with subcategories "FreeRunner", "Neo1973", "GTA03"... Otherwise, categories should not include the Neo type.
