--- a/Games%2FOm_2007.2.mw
+++ b/Games%2FOm_2007.2.mw
@@ -1,3 +1,4 @@
+{{Neo FreeRunner Menu}}
 I've been literally playing with my Moko lately, and figured I'd put fingers to keyboard with a little overview. Some of this is just stubs, and some are more informative. The first round of this is a recent (Jan?) build of OM.
 
 ===Black Box===
