--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -70,13 +70,14 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * Please read wikipedia [http://en.wikipedia.org/wiki/Wikipedia:Categorization Categorization] page and [http://en.wikipedia.org/wiki/Wikipedia:FAQ/Categorization FAQ]
 * There are way too many [[Special:Categories| categories]].
 * The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Categories_Index_Page categories index] is static and therefore out of date.
-* The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Official_Index_Page wiki index] is another static categorization.
-* There should be a small number of a orthogonal category trees, each describing one consistent conceptual taxonomy. Pages can fit in multiple categories.
+* The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Official_Index_Page wiki index] is another static categorization. It is therefore out of date. Moreover, it seems strictly hierarchical, while actually pages should be described with multiple categories, and categories can have multiple parents.
+* There should be a small number of a orthogonal category trees, each describing one consistent conceptual taxonomy.
 * Categories should not include language.
 * There should be only one category taxonomy for the "Neo type" with subcategories "FreeRunner", "Neo1973", "GTA03"... Otherwise, categories should not include the Neo type.
-* Another big taxonomy can be based on the layers model. "Hardware", "Drivers", "Operating system", "Framework", "Applications". With many subcategories here.
+* Another big taxonomy can be based on the layers model. "Hardware", "Drivers", "Operating system", "Framework", "Applications", "Distributions". With many subcategories here.
 * A taxonomy of technical level of expertise "General public", "Beginners", "Users", "Experts".
-* A taxonomy by function or by subsystem: "Phone", "Wifi", "GPS", "USB", "Accels"
+* A taxonomy by function or by subsystem: "Phone", "Wifi", "GPS/GPRS modem", "USB", "Bluetooth", "Accelerometers", "Audio", "Power", "SD card", "Serial bus", "Display", "Accessories", "Debug board"
+* A taxonomy by maturity: "Wishlist", "Experimental", "Unstable", "Testing", "Stable".
 [[User:MinhHaDuong|MinhHaDuong]] 10:47, 24 August 2008 (UTC)
 
 ===Lists now implemented as categories===
