*Empty MediaWiki Message*

--- a/Tichy.mw
+++ b/Tichy.mw
@@ -71,7 +71,7 @@ class MyApp(Application):
 
 == Authors ==
 * Guillaume "Charlie" Chereau, main developer
-* Michael "Goodwill" (Did the freedesktop app launcher plugin)
+* Michael "Goodwill"
 
 == Sources ==
 The sources can be found from svn repository on project.openmoko :
