--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -131,6 +131,12 @@ The name of this wiki is currently "Openmoko". I think it should be "Openmoko Wi
 
 '''No votes''':
 
+
+== Organize translations ==
+
+I suggest moving the translations to sub-wikis, like the way wikipedia does it. Currently all translations show up in searches and under category-lists. --[[User:Johndoesacc|Johndoesacc]] 12:03, 25 August 2008 (UTC)
+
+
 == Rejected requests ==
 
 When a requested Wiki Issue is voted for not to be done, it must be moved here, to make sure it won't get continously requested again.
