/* Running TangoGPS on debian */

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -68,7 +68,7 @@ Turns the GPS on.
 *** gpsd or the framework could implement the other's interface (along with their own).
 *** a translator could read one interface and emulate the other
 *** the framework could have an option to read data from gpsd.
-*** tangogps could be extended to read data from the framework.
+*** opgsd/gypsy could be extended to be backwards compatible with the majority of gps applications.
 
 == Downloading Maps for offline use ==
 tangoGPS can bunch-download the map images so you don't need an internet connection while walking around. By default tangoGPS stores downloaded maps to /tmp/. This folder is lost every time you reboo the device. But you can use the "Config" tab within tangoGPS to change the "Cache Dir" location to , for example, /osm/ . So downloaded maps will be kept in the Neos flash, also after reboot. This works fine on OM2007.2 and Debian. If this config gets lost during reboot file a bug against your distro.
