--- a/Manuals%2FNeo_FreeRunner%2Fru.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fru.mw
@@ -380,7 +380,7 @@ R: Это может быть исправлено изменением файл
 * Projects это GForge - бесплатный хостинг для разработчиков приложений.
 * Lists это список всех публичных списков рассылки на lists.openmoko.org.
 
-== Annotated references ==
+== Ссылки с аннотацией ==
 
 * [http://quickstart.openmoko.org/ Руководство по быстрому началу работы]. Главным образом используется в качестве основы для этой страницы.
 * [[Neo FreeRunner/ru]]. Общие характеристики.
