/* Running tangoGPS on Om 2008.8 */

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -15,7 +15,8 @@ Website: http://www.tangogps.org
 
 From the freerunner connected to the internet:
 
-  opkg install gpsd tangogps
+  opkg install gpsd 
+  opkg install http://www.tangogps.org/downloads/tangogps_0.9.3-r1_armv4t.ipk
 
 If opkg complains about not being able to acquire a lock, try:
 
