*Empty MediaWiki Message*

--- a/Distributions%2Fru.mw
+++ b/Distributions%2Fru.mw
@@ -1,4 +1,4 @@
-Openmoko distributions are designed to run on various mobile devices, with the primary aim of Openmoko Inc.'s Neo 1973 and Neo FreeRunner phones. They are similar to Linux distributions; complete operating systems with user applications. You can install any of them on your phone or even have a multiboot system with two distributions installed.
+Openmoko дистрибутивы разработаны для запуска на разных  мобильных устройствах, как первые из них  Openmoko Inc.'s Neo 1973 и Neo FreeRunner смартфоны. They are similar to Linux distributions; complete operating systems with user applications. Вы можете настроить мультизагрузку для запуска двух разных дистрибутивов (с основной памяти и с sd-карточки) на одном смартфоне.
 
 While the Openmoko distributions will run on other mobile devices too, some other software distributions will also run on the Openmoko Inc. phones (see below).
 
