added omview application

--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -35,6 +35,9 @@ An e-mail client for the [[Om2007.2]] distribution.
 '''[[Orrery]]'''<br>
 Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
 
+'''[[OMView]]'''<br>
+Fast and simple image viewer with thumbnail view.
+
 === System Software ===
 This is software that mostly has no GUI. This software is usually used by other programs.
 
