--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3266,6 +3266,7 @@ Status: 8/10 (Possibly 10?)
 * Devin Cook [[Special:Emailuser/Dcook|Contact]] (Lexington, KY)
 * Geoff Ruscoe    [[Special:Emailuser/Geocode|Contact]] - Louisville, KY
 * Jon Howard [[Special:Emailuser/Jchoward|Contact]] (Lexington, KY)
+* Fred Eisele [[Special:Emailuser/Phreed|Contact]] (Nashville, TN)
 
 === Ohio / Michigan ===
 Status: 10/10 are delivered or en-route to their final destination.
