/* Booting into Qtopia */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -96,9 +96,9 @@ This will take some time (couple hours). Note that the option "-device ficgta01"
 
 will make a root directory into build directory. That directory should be copied to /opt/Qtopia of your phone with scp. once done restart qpe or whole phone.
 
-=== Booting into Qtopia ===
+=== Lanciare Qtopia ===
 
-Now shutdown the FreeRunner
+Ora spegni il FreeRunner
 
   shutdown -h now
 
