*Empty MediaWiki Message*

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -311,6 +311,7 @@ Please see [[I2C | Neo I2C Devices]] for more information & a list of devices & 
 * OTG, to be able connect usb keyboard like [http://www.mobile-review.com/pda/review/cherry-kb-en.shtml Cherry G84-4321 SUNRG]
 * Bootable USB device emulation: the possibility to boot any computer on a bootable flagged partition of the transflash.
 * Protection against incorrectly wired USB ports: some USB ports are wired incorrectly; if the +5V and GND are swapped, the device would get -5V when it's expecting +5V, which could burn some chips. A reverse-biased diode between +5V and GND, D+ and GND, D- and GND, and (if used) ID and GND, with a low enough forward voltage drop (to limite the negative voltages to what the chips can withstand), would protect the device by tripping the port's short circuit protection.
+* 2 USB-Ports; one for acting as USB-host and one for acting as USB-device at same time.
 
 ====Wireless USB support====
 [http://en.wikipedia.org/wiki/Wireless_USB Wireless USB] is the wireless version of USB offering data-rates up to 480 Mbit/s over short distances (<3 meter). Chipsets suitable for a phone are likely to take some time to be available.
