/* Populate SD card */

--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -162,14 +162,14 @@ Mount the second partition of your SD card somewhere and put the image on it:
 
 '''''Note:''''' As always in this guide the device name as well as the rootfs name needs to be adjusted to your device and filename structure
 
-'''''Note:''''' There's a nice gotcha to take care about if you use your host OS automount.  Some hosts mount these removable devices with "nodev" option by default for security.  If the image you are unpacking has a populated /dev directory, the nodes will fail to create as devices then.  If auomounting the SD on your host, confirm there are no unexpected mount options by using "mount" command alone to list the mounts.
+'''''Note:''''' There's a nice gotcha to take care about if you use your host OS automount.  Some hosts mount these removable devices with "nodev" option by default for security.  If the image you are unpacking has a populated /dev directory, the nodes will fail to create as devices then.  If automounting the SD on your host, confirm there are no unexpected mount options by using "mount" command alone to list the mounts.
 
 The next step is to mount the first partition of the sd card and install the kernel on it.
 
  mount /dev/mmcblk0p1 /mnt/mokokernel
  cp uImage-fic-gta01-latest.bin /mnt/mokokernel/uImage.bin
 
-Make sure your kernel is called ''uImage.bin'' after copying it to the card. If the u-boot doesn't find the kernel image during boot, log into the bootloader with ''cu'', mount the partition with mmcinit and check the presence and the name of the kernel image with ''fatls mmc 1:1''.
+Make sure your kernel is called ''uImage.bin''. If the u-boot doesn't find the kernel image during boot, [[Bootloader#Using usbtty from Linux|log into the bootloader]] with ''[http://www.airs.com/ian/uucp.html cu]'', mount the partition with mmcinit and check the presence and the name of the kernel image with ''fatls mmc 1:1'' for FAT filesystem or ''ext2ls mmc 1:1'' for ext2 filesystem.
 
 Unmount both the rootfs partition and the kernel partition and make sure all remaining buffers are written to it:
 
