--- a/OMView.mw
+++ b/OMView.mw
@@ -2,7 +2,7 @@
 [[Image:omview_thumbs.png|thumb]]
 
 == Overview ==
-OMView is a simple image viewer for the openmoko platform. It supports mouse/touchscreen gestures, thumbnail view and raw files. It is intended to be lightweight, fast and easy to use. It depends on the [http://www.enlightenment.org/ EFL] and was only tested on 2008.8.
+OMView is a simple image viewer for the openmoko platform. It supports mouse/touchscreen gestures, thumbnail view and raw files. It is intended to be lightweight, fast and easy to use. It depends on the [http://www.enlightenment.org/ EFL], for now tested 2007.2 and 2008.8.
 
 == Download and installation ==
 The most recent package will be [http://projects.openmoko.org/frs/?group_id=182 here]. Just Install the ipk.
