/* Installare il Filesystem Root */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -63,7 +63,7 @@ Loggati sul tuo FreeRunner e spacchetta il filesystem root:
   rm qtopia-4.3.2-gta02-rootfs-07172049.tar.gz
   rm -f /media/mmcblk0p2/boot/*
 
-'''''Nota:''''' l'ultimo passaggio rimuove l'immagine del kernel dalla seconda partizione. Per la stessa ragione, U-Boot non può trovare il file uImage.bin nella prima partizione se un'immagine del kernel esiste nella directory boot/ sulla seconda partizione.
+'''''Nota:''''' l'ultimo passaggio rimuove l'immagine del kernel dalla seconda partizione. Infatti U-Boot non può trovare il file uImage.bin nella prima partizione se un'immagine del kernel esiste nella directory boot/ sulla seconda partizione.
 
 ==== Installare il Kernel ====
 Dalla tua Linux box rinomina il file <tt>uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin</tt> come <tt>uImage.bin</tt> e copialo nella directory di boot sulla prima partizione della MicroSD. Dipendendo dalla versione di U-Boot che hai installato, questo potrebbe non funzionare. Per supportare ogni possibile versione, mettine una copia anche nella directory <tt>/media/card</tt>. C'è abbastanza spazio nella prima partizione da permetterci di acere <tt>uImage.bin</tt> in entrambi i posti.
