*Empty MediaWiki Message*

--- a/Neo_FreeRunner_Memory_Mapping.mw
+++ b/Neo_FreeRunner_Memory_Mapping.mw
@@ -1,4 +1,6 @@
-== GTA02 Memory Mapping ==
+The first block holds a little 4KByte RAM buffer that is auto-filled
+from NAND by CPU hardware, called "steppingstone" when we boot from
+NAND, or the NOR is mapped in there.
 
 nCS0: 00000000 07FFFFFF  4K steppingstone or NOR (Aux held down) <br>
 nCS1: 08000000 0FFFFFFF  Glamo <br>
