--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -403,7 +403,7 @@ Until that goal is reached, it is likely that some phones will be brought out fo
 * [http://www.fonefunshop.co.uk/dualsim/digital.htm Dual SIM card kit] - two SIMs are trimmed and combined, software supportwould be needed, and both can't be used at once...
 * Some networks support multiple numbers on one SIM. Unfortunately this won't allow split networks.
 * A second/dual GSM module would allow full use of both sims at all times.
-* As a hack, [http://wiki.openmoko.org/wiki/Wish_List#Bluetooth_powered_Multi-SIM_support use another mobile via BT].
+* As a hack, [[Bluetooth_powered_Multi-SIM_support | use another mobile via BT]].
 ** As many as three SIM slots would be genuinely useful, especially for a 3G phone - some 3G data tariffs are only available on data-only SIMs. A user could quite reasonably have one SIM for data, once SIM for his personal voice calls, and a third SIM for his business number.
 * Dual SIM card support will be especially welcome by the women. They just love to talk on the phone.
 * Save the contents from several SIM-cards to memory and simulate them.
