--- a/Opkg.mw
+++ b/Opkg.mw
@@ -6,6 +6,8 @@ A mailing list for discussion is available here: http://lists.openmoko.org/mailm
 
 Source code is available in the subversion repository: http://svn.openmoko.org/trunk/src/target/opkg/. The repository can also be [http://svnweb.openmoko.org/trunk/src/target/opkg/ viewed online].
 
+You can learn how to create own [http://handhelds.org/moin/moin.cgi/BuildingIpkg Opkg packages] on the Ipkg site.
+
 == New Features ==
 
 This is a list of features that have been completed. Mostly this is a list of changes from Ipkg.
