--- a/OMView.mw
+++ b/OMView.mw
@@ -32,7 +32,7 @@ Directory and thumbnail view always show 6 items at the same time with the other
 |next image
 |-
 |up
-|change to parent directory. Close Program if we're already at the root.
+|change to parent directory
 |change to directory view
 |change to thumbnail view
 |-
