--- a/Openmoko_Local_Groups:_Freiburg_im_Breisgau.mw
+++ b/Openmoko_Local_Groups:_Freiburg_im_Breisgau.mw
@@ -23,6 +23,12 @@
 |i don't know yet.
 |Freiburg (/ Calw Wohnsitz meiner Familie)
 |GTA02
+|-
+|[[User:Kareema|Kareema]]
+|Python, Perl, Java and a bit C; shell and package building.
+|Having fun playing with the device and developping software for it.
+|Freiburg im Breisgau
+|GTA02
 |}
 
 === Notes ===
