/* PIM (Personal Information Managment) */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -369,11 +369,12 @@ One of the most useful apps on my Palm Pilot for me is [http://pilot-db.sourcefo
 * It'd be nice to have something like [http://www.joesgoals.com Joe's Goals] always available, like my phone is, even when I'm disconnected from the net.
 * I would like to be able update my [http://todotxt.com/ todo.txt] which is stored on a personal server from the phone.
 
-
 ==== Context based To-Do list ====
 {{Main|Wishlist:context based to-do list}}
 
 If I arrive home and there are "@home" things in the to-do list, the Context based to-do list reminds me of that.
+
+* Idle Hands. The application will know our location (work, home, etc.) by comparing your current GPS coordinates to your list of tagged locations. When you are at a location and you have nothing to do you can open Idle Hands and it will randomly select a small task that is appropriate to that location. For example, I might list the following as work tasks: fill stapler, empty trash bin, clean mouse ball, wipe off monitor. This way when a meeting gets pushed back five minutes I don't have to sit around and doing nothing. I can fire up Idle hands, which will randomly provide me with a small task I can do. This is good because I'd rather refill my stapler when I have nothing else to do than in the middle of stapling a stack of things. Tasks can have multiple tags. For example, "clean mouse ball" might be appropriate for both work and home. The user should be able to hit a next botton to skip the currently listed task. Each task might also have a property stating how much time should pass before it is randomly selected again. For example, if today is Friday and I cleaned my mouse ball on Monday, that task should not come up.
 
 ==== Workout ====
 
