--- a/FAQ.mw
+++ b/FAQ.mw
@@ -120,11 +120,11 @@ A: Reviews of the latest "bleeding edge" daily builds of the Openmoko software s
 
 A: At the moment, the answer to many other questions is "no". The phone is at the moment a small linux box with a touchscreen, a working dialer and some prototype apps.  Most do not function in any way that would be suitable for end-users.  If you want to add a feature or application request, then look over the existing [[Applications]] and either add one, or add a feature request to the applications page.
 
-===What software is on the phone?===
+===Q: What software is on the phone?===
 At the moment, almost no 'end-user' applications are present and working in a usable state.
 It is possible to make and receive calls in some software revisions, this frequently breaks though.
 
-====What software can be installed on the phone?====
+====Q: What software can be installed on the phone?====
 
 === Q: Is there description and list of Openmoko software? ===
 
