*Empty MediaWiki Message*

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -2,6 +2,8 @@
 
 ==Zen Phone==
 
+What is zhone, can anyone explain, and write something here?
+
 The Framework Testing Image.
 
 ==Installing Zhone on Ubuntu ==
