/* configure your setting of host */

--- a/How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top.mw
+++ b/How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top.mw
@@ -3,9 +3,7 @@ This page , we will introduce about , how to active your Neo bluetooth device vi
 ==configure your setting of host ==
 First you should modify this bluetooth setting file in your desk-top computer:
 
-
  > sudo vi /etc/default/bluetooth
-
 
 then search for the keyword "/pand" to find  " PAND_ENABLED=0  "
 
@@ -19,15 +17,13 @@ After you modify the setting, use this command to restart bluetooth device.
 
 After restarting the bluetooth, you will see Bluetooth PAN daemon information.
 
-That means you wake up the '''PAN''' daemon suscessfully :P
+That means you wake up the '''PAN''' daemon successfully.
 
 After that,you should pass the argument to let PAN daemon know what it should do now.
 
  > sudo pand -s 
 
-this command let desk-top computer  be a Server to listen  the other linux-based devices
-
-which is connecting it through the bluetooth.
+this command lets a desk-top computer be a server to listen to other Linux-based devices connecting to it through Bluetooth.
 
 ==On the Neo side==
 In the Neo:
