--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -86,7 +86,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | ST STLC4550 (WIFI & BT coexistence) || NA || NA || NA || see [http://www.st.com/stonline/products/families/communication/wscomm/wlan/stlc4550.htm ST's website]
 |-
-| AzureWave AW-GH381 (Marvell 8688) || NA || NA || NA ||NA
+| AzureWave AW-GH381 (Marvell 8688) || No, waiting for answer || NA || NA ||NA
 |-
 
 |}
