/* Q: Do I need the debug board? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -66,22 +66,23 @@ A: The Neo Freerunner is the first phase 2 (mass release) phone from the Openmok
 
 A: The question is almost what can you NOT do with this phone - eventually there will be a huge range of free software applications allowing both end users and developers to get much more out of this phone than a standard "locked" mobile phone using features like the integrated GPS, bluetooth, wifi and accelerometers.
 
-=== Q: Do I need the Neo 1973 Advanced (or in due course the Neo Freerunner Advanced)? === 
+=== Q: Do I need the debug board? === 
 
-End users or power users should buy the "base" unit.
+With a Neo 1973 or a Neo FreeRunner and NO debug board you can do:
+* Kernel development
+* Application development
+* Update u-boot (equivalent to PC BIOS). Neo 1973 users should only use a tested image to avoid the possibility of bricking the Neo 1973. Neo FreeRunner users do not have this concern, as a bad u-boot can always be updated using the failsafe u-boot in NOR flash
+* Update kernel and/or rootfs using [[Dfu-util]].
 
-Software developers may wish to buy the "advanced" model.
+With a debug board you can additionally do:
+* Use JTAG to debug u-boot, device drivers, or the kernel
+* Use the kernel console
+* Neo 1973 users can unbrick their device if they flash a wrong or non-working u-boot image.
+* Neo FreeRunner users can update u-boot in NOR flash
 
-With Neo 1973 Base or Neo Freerunner Base you can do:
-* Kernel development.
-* Application development.
-* Updating u-boot (equivalent to PC BIOS) using a tested image.
-* Replace a non-booting kernel and/or rootfs using [[Dfu-util]].
+In summary, it is rare for a Neo FreeRunner user to require a debug board.
 
-With Neo 1973 Advanced or Neo Freerunner Advanced you can additionally do:
-* U-boot development.
-* Use the kernel console.
-* Unbrick your device if you flash a wrong or non-working u-boot image.
+To emphasize, the debug board is '''not''' required in order to develop applications, system software, or even kernel or device drivers. The debug board is '''not''' required in order to gain access to the source code or the development tools.
 
 === Q: I have a shipping related question === 
 
