/* Q: What does the Neo FreeRunner look like? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -99,7 +99,7 @@ For FreeRunner
 
 === Q: What does the [[Neo FreeRunner]] look like? ===
 
-* It uses the same case and dimensions as the Neo1973 (as announced at CES Jan08)
+* From the outside, almost exactly the same as the Neo 1973. The case is all black, and it says "Neo FreeRunner" on the front.
 
 === Q: What else do I need to know? ===
 
