--- a/FAQ.mw
+++ b/FAQ.mw
@@ -104,8 +104,8 @@ For FreeRunner
 === Q: What else do I need to know? ===
 
 * Both Neo 1973 and Neo Freerunner are tri-band GSM phones.   
-* The Neo Freerunner is expected to be offered in an 850/1800/1900MHz version for North America and an 900/1800/1900MHz version for the rest of the world.      
-* The Neo1973 is an 900/1800/1900Mhz version only and may not work well in some rural parts of North America.
+* The Neo Freerunner is as an 850/1800/1900MHz version for North America and an 900/1800/1900MHz version for the rest of the world.      
+* The Neo 1973 is only available as an 900/1800/1900Mhz version only and may not work well in some rural parts of North America.
 
 === Q: What are the benefits of an "open" phone over a "closed" phone ===
 
