/* Q: How can I compile programs for the Neo1973? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -143,7 +143,7 @@ Otherwise it is completely free software. See [[MokoMakefile]] and [[Development
 
 A: ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
-=== Q: How can I compile programs for the Neo1973? ===
+=== Q: How can I compile programs for the Neo 1973 or the Neo FreeRunner? ===
 
 A: See [[Toolchain]].
 
