--- a/FAQ.mw
+++ b/FAQ.mw
@@ -152,7 +152,7 @@ A: See [[Toolchain]].
 For a lot of testing and development work, you don't actually need emulation as you can run Openmoko on a normal PC too. The emulators also aren't 100% accurate. That being said, there are several emulation options as described in the following.
 
 ====QEMU====
-QEMU can now emulate the Neo1973 device. The [[MokoMakefile]] has support for automatically building, flashing, and running [[Openmoko under QEMU|the Neo1973 emulator]].
+QEMU can now emulate the Neo 1973 and the Neo Freerunner. The [[MokoMakefile]] has support for automatically building, flashing, and running [[Openmoko under QEMU|the Neo emulator]].
 
 *Ubuntu users can follow the instructions in [[Automatic_emulation_in_Ubuntu]]
 
