*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -320,6 +320,7 @@ __NOTOC__
 *[[Boot from sd card]]
 *[[Charging battery directly]]
 ====Software Documentation====
+*[[Biking]]
 *[[Illume]]
 *[[Debian]]
 *[[GPS Data Logger]]
