*Empty MediaWiki Message*

--- a/Neo_1973_Battery_Charging_Logic.mw
+++ b/Neo_1973_Battery_Charging_Logic.mw
@@ -84,6 +84,20 @@ Cut a strip of double-sided PCB, the thinner the better (or glue two strips of s
 
 [http://www.youtube.com/v/HzqzlA8NE2Y The video]
 
+==Power management overview script==
+
+Save the following as a script, somewhere in your path, e.g. /usr/local/bin/pow, and chmod a+rx to make it executable:
+<pre>
+#!/bin/sh
+echo "charge current    " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/chgcur`
+echo "charge mode       " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/chgmode`
+echo "charge state      " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/chgstate`
+echo "batt temp " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/battemp`
+echo "batt voltage      " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/battvolt`
+echo "BT power  " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/neo1973-pm-bt.0/power_on`
+echo "GPS power " `cat /sys/devices/platform/s3c2410-i2c/i2c-adapter/i2c-0/0-0008/neo1973-pm-gps.0/pwron`
+</pre>
+
 ==[http://bugzilla.openmoko.org/cgi-bin/bugzilla/buglist.cgi?short_desc_type=anywordssubstr&short_desc=battery+charging+charger+charge&product=Neo1973+Hardware&product=Openmoko&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&rep_platform=Neo1973&emailassigned_to1=1&emailtype1=substring&email1=&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&changedin=&chfieldfrom=&chfieldto=Now&chfieldvalue=&cmdtype=doit&order=Bug+Number&field0-0-0=noop&type0-0-0=noop&value0-0-0= Related bugs]==
 
 [[Category:Neo1973 Hardware]]
