--- a/OMView.mw
+++ b/OMView.mw
@@ -52,3 +52,4 @@ Directory and thumbnail view always show 6 items at the same time with the other
 * No feedback on thumbnail creation/loading
 * Dir view only reacts to the second click
 * thumbnail creation is slower than image viewing and takes much space (~ 100K per image) to free this space just delete .thumbnail folder in the home dir.
+[[category:Applications]]
