--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -310,6 +310,7 @@ __NOTOC__
 *[[Bluetooth]]
 *[[GPS]]
 ====Hardware Documentation====
+*[[Neo FreeRunner Memory Mapping]]
 *[[Hardware:AT Commands]]
 *[[Connecting Neo1973 with Debug Board v2]]
 *[[Connecting GTA01Bv2 with Debug Board]]
