/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3010,7 +3010,7 @@ Host: Mac Lin (mkl23@hotmail.com)
 payment: paid by ATM account transfer
 Maximum amount of transfer-out for non-designated accounts per day should not exceed NT$30,000
 
-國泰世華(013)　04250XXXXXX8
+Cathy United Bank(國泰世華/013)　04250XXXXXX8
 
 How to take:
 *face to face: in HsinChu
