--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -37,5 +37,6 @@ You can join [https://lists.openmoko.org/mailman/listinfo/documentation document
 == Language tools ==
 
 * Strunk's [http://www.crockford.com/wrrrld/style.html Elements of Style]. Knowing these 18 rules of good style is a must for anybody writing in English.
+* [http://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style Wikipedia's Manual of Style]
 
 [[Category:Community]]
