--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -72,7 +72,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Categories_Index_Page categories index] is static and therefore out of date.
 * The [http://wiki.openmoko.org/wiki/Openmoko_Wiki_Official_Index_Page wiki index] is another static categorization. It is therefore out of date. Moreover, it seems strictly hierarchical, while actually pages should be described with multiple categories, and categories can have multiple parents.
 * There should be a small number of a orthogonal category trees, each describing one consistent conceptual taxonomy.
-* Categories should not include language.
+* Ideally categories should not include language, if we don't do so the list of pages is cluttered.
 * There should be only one category taxonomy for the "Neo type" with subcategories "FreeRunner", "Neo1973", "GTA03"... Otherwise, categories should not include the Neo type.
 * Another big taxonomy can be based on the layers model. "Hardware", "Drivers", "Operating system", "Framework", "Applications", "Distributions". With many subcategories here.
 * A taxonomy of technical level of expertise "General public", "Beginners", "Users", "Experts".
