/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3045,7 +3045,7 @@ How to take:
 | 3
 | 0
 | 0
-|
+|Taipei
 |yes
 |-
 | 3. Scott Wang (scott_wang@)
@@ -3059,8 +3059,8 @@ How to take:
 | 1
 | 1
 | 0
-|
-|
+|TaiChung
+|yes
 |-
 | 5. Allan Yang (allan.yang@)
 | 1
