/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -61,8 +61,9 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Why Not QT]] and [[Talk:Why Not QT]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[special]] || not translated, seems to be information about e-mail confirmation || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Flashing in windows/it]] || English page has already been deleted || [[User:Marko Knöbl|Marko Knöbl]]
 |}
-
 
 ==Categories ==
 
