--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -14,13 +14,15 @@ Any problems with the software below should be reported to the individual softwa
 === Browsers ===
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
-[[Image:Om2008 home.png|150px|center]]
+[[Image:Minimo-slashdot.jpeg|150px|center]]
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
 :'''[[Minimo]]'''<br>
 
 :Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to the standard Webkit based browser.
 
 :Download here:
+
+[http://www.ginguppin.de/files/minimo.tar.bz2 http://www.ginguppin.de/files/minimo.tar.bz2]
 
 :Compatible:
 
